k8s/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080  # If KIND Cluster: accessable via <node-ip>:30080
  selector:
    app: python-app
